--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,42 @@
 body{
     background-color: beige;
 }
+
+#infoc{
+    margin-top: 4em;
+}
+
+.imgbx{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: rgb(184, 91, 54);
+}
+#poster{
+    object-fit: inherit;
+    max-width: 90%;
+    padding: 1.5em;
+    border: 2px solid brown;
+    border-radius: 7px;
+}
+
+#boxp{
+    opacity: 0.5;
+    scale: 80%;
+    margin-top: 8em;
+    transition: background-color 0.8s ease 0s , opacity 0.5s ease 0.4s;
+}
+#boxp:hover{
+    opacity: 0.8;
+    background-color: rgb(236, 122, 122);
+}
+
+#bkdrp{
+    max-width: 100%;
+}
+
+#plot{
+    text-emphasis-color: goldenrod;
+    text-shadow: goldenrod;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
