--- a/views/info.ejs
+++ b/views/info.ejs
@@ -1,25 +1,51 @@
 
 <% layout('layouts/boilerplate') %>
 
-<div class="container">
-    <div class="row">
-        <div class="col">
-          id:  <%= data.id %> <br>
-           imbd id: <%= data.imdb_id %> <br>
-           title: <%= data.title %> <br>
-           Tagline: <%= data.tagline %> <br>
-           status: <%= data.status %> runtime: <%= data.runtime %> <br>
-           released: <%= data.release_date %> <br>
-           <a href="<%= data.homepage %>">go to official page</a><br>
-        
-        <p><%= data.overview %> </p><br>
-        votesAVG: <%= data.vote_average %> 
-           voters: <%= data.vote_count %> <br>
-        <div><img src="<%= data.poster_path %>" alt=""></div>
-        <div><img src="<%= data.backdrop_path %>" alt=""></div>
+<script src="/js/imdbcast.js"></script>
+
+<div class="container" id="infoc">
+    <div class="row justify-content-center">
+
+        <div class="col col-5">
+            <div class="imgbx"><img src="<%= data.poster_path %>" alt="" id="poster"></div>
+        </div>
+        <div class="col col-7">
+            <h3><%= data.title %></h3> </span>
+            <p>
+                <% if(data.tagline){ %> <span class="text-muted">  Tagline~ "<%= data.tagline %>"      </span> <% } %> 
+               <span>     Go to <a href="<%= data.homepage %>">Official Page</a></span> 
+            </p>
+            <p><b>Genres: - </b>
+                <% for(let i=0 ; i<data.genres.length ;i++){ if( i== (data.genres.length-1) ){ %> 
+                    <%= data.genres[i].name %> <% }else{ %> <%= data.genres[i].name %> , <% } %>  <% } %> 
+            </p>
+            <p><b>status:</b>  <%= data.status %></p>  
+            <p><b>Release Date:</b> <%= data.release_date %></p>
+            <p><b>Runtime:</b>  <%= data.runtime %> minutes</p>
+            <p><b>Popularity:</b> <%= data.popularity %> ,<b>IMDB_id:</b> <%= data.imdb_id %></p>
+            <p><b>votesAVG:</b>  <%= data.vote_average %> ,<b>voted:</b>  <%= data.vote_count %></p>
+            <br>
+            <p>Cast:- <ul>
+                <% for(let i=0 ; i <data2.cast.length ; i++){ %> 
+                <li><b><%= data2.cast[i].actor %></b> as <%= data2.cast[i].character %> </li>    
+                    <% if(i>5){break;}} %>
+                    </ul>
+                </p>
             
+        </div>
+        <div class="col col-8" style="margin-top: 2em;">
+            <div class="card bg-dark text-white">
+            <img src="<%= data.backdrop_path %>" class="card-img" alt="...">
+            <div class="card-img-overlay">
+                <div id="boxp">
+                    <h5 class="card-title">plot</h5>
+                    <p class="card-text"><i id="plot"><%= data.overview %></i></p>
+                </div>
+                
+            </div>
+            </div>
         </div>
 
     </div>
-
 </div>
+
