--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,8 @@
 
 <% layout('layouts/boilerplate') %> 
 
+<%- include('./partials/Hnavbar')  %> 
+
 <link rel="stylesheet" href="/css/home.css">
 
     <div class="container">
