--- a/views/partials/Hnavbar.ejs
+++ b/views/partials/Hnavbar.ejs
@@ -9,15 +9,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link" href="/">Home NAv</a>
                     
                 </div>
-                <div class="navbar-nav ml-auto">
-                    <form action="/search" method="post" class="validateForm" novalidate>
-                        <input class="form-control" type="text" name="term" id="query" placeholder="search">
-                        <input type="radio" name="Qtyp" id="nameradio" value="n" checked required style="display: none;">
-                        </form>
-                </div>
+                
             </div>
         </div>
     </nav>
