--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,5 +1,7 @@
 <% layout('layouts/boilerplate')%>
 
+<%- include('./partials/navbar')  %> 
+
 <div class="row">
     <div class="col-6 offset-3">
         <div class="alert alert-danger" role="alert">
