--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+<%- include('./partials/navbar')  %> 
 
 <% if(!term){ %> 
   <h2>Results for " "</h2>
@@ -17,14 +18,14 @@
         <div class="row justify-content-center">
             <% for(let obj of resultsARRAY){ %>
                 <div class="col-sm-8 col-md-6 col-lg-4 col-xxl-3">
-                    <div class="card">
-                        <img src="<%= obj.poster_path %>" class="card-img-top" alt="N/A">
+                    <div class="card mt-3">
+                        <a href="/search/<%= obj.title %>/<%= obj.id %>"><img src="<%= obj.poster_path %>" class="card-img-top" alt="N/A"></a>
                         <div class="card-body">
-                          <h5 class="card-title">Movie title - <%= obj.title %> </h5>
-                          <p class="card-text"> in Language : <%= obj.original_language %>  with ID - <%= obj.id %> released- <%= obj.release_date %>   </p>
-                          <p class="card-text"> popularity : <%= obj.popularity %>, votes: <%= obj.vote_average %> by <%= obj.vote_count %> voters.  </p>
-                          <a href="/search/<%= obj.id %>" class="btn btn-primary">show details</a>
-                          <a href="/search/imdb/<%= obj.title %>" class="btn btn-primary">more</a>
+                          <h5 class="card-title bg-info" id="cardHd"><%= obj.title %></h5>
+                          <p class="card-text"><b>Language :</b> "<%= obj.original_language %>"  <span class="text-muted">        ID-<%= obj.id %></span></p>
+                          <p class="card-text"><b>Released :</b> <%= obj.release_date %>  ,  <b>popularity :</b> <%= obj.popularity %></p>
+                          <p class="card-text"><b>votes :</b> <%= obj.vote_average %> <b>Out of:- </b> <%= obj.vote_count %> voters.  </p>
+                          <a href="/search/<%= obj.title %>/<%= obj.id %>" class="btn btn-primary">Details</a>
                         </div>
                       </div>
                 </div>
