--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,15 +10,19 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link" href="/">Home</a>
-                <a class="nav-link" href="/search/d">d</a>
             </div>
             <div class="navbar-nav ml-auto">
-                
-                    <a class="nav-link" href="/login">Login</a>
-                    <a class="nav-link" href="/register">Register</a>
-                    
-                    <a class="nav-link" href="/logout">Logout</a>
-    
+                <form action="/search" method="post" class="d-flex" novalidate>
+                    <div class="row justify-content-around">
+                        <div class="col-4">
+                            <button class="btn btn-md btn-outline-success">Search</button>
+                        </div>
+                        <div class="col-8">
+                            <input class="form-control" type="text" name="term" id="query" placeholder="Movie-Name" style="width : 100%;">
+                            <input type="radio" name="Qtyp" id="nameradio" value="n" checked required style="display: none;">
+                        </div>
+                    </div>
+                    </form>
             </div>
         </div>
     </div>
