--- a/views/partials/Hnavbar.ejs
+++ b/views/partials/Hnavbar.ejs
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary"  id="top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Mubies🍦</a>
+      <a class="navbar-brand" href="#">Mubies🍦</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
