--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,19 +16,12 @@
     <%- body %> 
 
     <footer>
-        <center>
-          <button type="button" class="btn btn-info"><a href="https://www.gmail.com/" target="_blank">Contact Us</a></button>
-        </center>
       <p style="margin:30px;">
-        <a href="https://www.twitter.com/" style="padding:0px 10px;" target="_blank">Twitter</a>
-        <a href="https://www.github.com/" style="padding:10px 10px;" target="_blank">Github</a>
-        <a href="https://www.facebook.com/" style="padding:10px 10px;" target="_blank">Facebook</a>
-        <a href="#top" style="position:absolute;right:30px;">Back to top</a>
+        <a href="https://github.com/Shinkun-git/GroupProject" style="padding:0px 10px;" target="_blank">Github</a>
+        <a href="https://www.gmail.com/" style="padding:10px 0px;" target="_blank">Contact Us</a>
         <br /><br />
-        Made by Aman Baibhav Nikhil Prashant</br>
-        Based on <a href="https://www.npmjs.com/package/axios" target="_blank">axios</a> http client, <a href="https://www.omdbapi.com/" target="_blank">omdb</a> api and <a href="https://getbootstrap.com/" target="_blank">bootstrap</a>.
-      </br>
-      Icons from <a href="https://icons.getbootstrap.com/" target="_blank">Bootstrap-icons</a>. Web fonts from <a href="https://fonts.google.com/" target="_blank">Google</a>.
+       
+      ©️ Mubies 2021
       </p>
       
       </footer>
