--- a/public/css/home.css
+++ b/public/css/home.css
@@ -6,49 +6,59 @@ body{
     background-repeat: no-repeat;
 }
 
-
+#uname{
+    font-size: 30px;
+    font-weight: 200;
+    font-family: cursive;
+    vertical-align:center;
+}
 body>.container{
     margin-top: 8rem;
 }
 
 #hform{
-    border: 2px solid rgb(51, 117, 6);
-    border-radius: 2em;
+    border: 2px solid rgb(118, 49, 187);
+    border-radius: 8px;
     padding-left:1em ;
     padding-right:1em ;
-    padding-top: 0.4em;
-    padding-bottom: 0.4em;
+    padding-top: 2em;
+    padding-bottom: 2em;
     opacity: 0.8;
-    background-color: rgb(190, 175, 167);
+    background-color: rgba(121, 48, 189, 0.611);
 }
 
-
+#search-form{
+    font-size: 2em;
+    font-family: cursive;
+    color:#7952B3;
+}
 
 #rdio{
-    background-color: rgb(76, 197, 147);
+    /* background-color: rgb(9, 196, 118); */
+    background-color: rgba(121, 48, 189, 0);
+    border-radius: 6px;
+    padding: 1em 2em;
+    justify-self: center;
 }
 
 #submit{
-    transform: scale(1.4,1.2);
-    padding-left: 2em;
-    padding-right: 2em;
+    padding: 10px 25px;
     border: 1px solid rgb(161, 191, 245);
-    background-color: rgb(201, 50, 50);
-    align-items: center;
-    
+    background-color: rgb(113, 194, 120);
+    margin-left: 30%;
 }
 
 #query{
-    min-width: 350px;
     border: 3px solid rgb(88, 189, 219);
     border-radius: 15px;
-    border-left-color: brown;
+    border-left-color:rgb(138, 29, 240);
     border-right-color: rgb(138, 29, 240);
     padding: 0.5em;
     text-align: center;
-    transform: scaleX(100%);
-    opacity: 0.55;
+    transform: scaleX(90%);
+    opacity: 0.8;
     box-shadow: 6px 8px 6px 1px rgb(75, 73, 73);
+    background-color: rgb(15, 15, 11);
 }
 
 #nameradio{
@@ -56,10 +66,33 @@ body>.container{
 }
 
 #gens{
-    background-color: rgb(128, 153, 223);
+    /* background-color: rgb(66, 96, 180); */
+    background-color: rgba(121, 48, 189, 0);
     border-radius: 7px;
 }
 
 #genradio{
     margin-left: auto;
+}
+
+@media (max-width: 512px){
+   #cntntcol{
+       width: 480px;
+   }
+}
+@media (max-width:350px){
+    #cntntcol{
+        width: 350px;
+    }
+    #container{
+        padding:0px;
+    }
+    #element2{
+        justify-content: center;
+    }
+}
+@media (min-width: 351px){
+    #element2{
+        justify-content: space-between;
+    }
 }
