--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -64,17 +64,87 @@ body{
     border-radius: 3px;
 }
 
-#revCOl{
-    border: 2px solid rgb(233, 143, 26);
-    border-radius: 5px;
-}
 
-.revBOX{
-    background-image: linear-gradient(to bottom right, rgba(130, 79, 212, 0.87), rgb(194, 101, 101));
-    border: 1px solid rgb(160, 6, 6);
+#revBOX{
+    background-image: linear-gradient(to bottom right, rgba(144, 101, 219, 0.87), rgb(168, 76, 76));
+    border: 1px solid rgb(109, 98, 98);
     border-radius: 5px;
     padding-top: 1em;
     padding-bottom: 1em;
     padding-left: 2px;
     padding-right: 2px;
+    opacity: 0.7;
+}
+#usr{
+    color:blueviolet;
+    font-family: cursive;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+#uname{
+    font-size: 30px;
+    font-weight: 200;
+    font-family: cursive;
+    vertical-align:center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+*{
+    margin: 0;
+    padding: 0;
+}
+.rate {
+    float: left;
+    height: 46px;
+    padding: 0 10px;
+}
+.rate:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+}
+.rate:not(:checked) > label {
+    float:right;
+    width:1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:30px;
+    color:#ccc;
+}
+.rate:not(:checked) > label:before {
+    content: '★ ';
+}
+.rate > input:checked ~ label {
+    color: #ffc700;    
+}
+.rate:not(:checked) > label:hover,
+.rate:not(:checked) > label:hover ~ label {
+    color: #deb217;  
+}
+.rate > input:checked + label:hover,
+.rate > input:checked + label:hover ~ label,
+.rate > input:checked ~ label:hover,
+.rate > input:checked ~ label:hover ~ label,
+.rate > label:hover ~ input:checked ~ label {
+    color: #c59b08;
 }
