--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary"  id="top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary"  id="top" style="background-image: linear-gradient(to bottom right, rgb(105, 91, 231), rgb(171, 92, 207));opacity:0.8;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Mubies🍦</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,81 +20,46 @@
             <a class="nav-link" href="https://www.imdb.com/chart/moviemeter/?ref_=nv_mv_mpm" target="_blank">Popular</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#_about">About</a>
-          </li>
-          <li class="nav-item" style="position:absolute;right:150px;">
-            <a class="nav-link" href="https://www.github.com/" target="_blank"><i class="bi bi-github"></i></a>
-          </li>
-          <li class="nav-item" style="position:absolute;right:100px;">
-            <a class="nav-link" href="https://www.twitter.com/" target="_blank"><i class="bi bi-twitter"></i></a>
-          </li>
-          <li class="nav-item" style="position:absolute;right:50px;">
-            <a class="nav-link" href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
+            <a class="nav-link" href="/about">About</a>
           </li>
         </ul>
-        <div class="navbar-nav ml-auto">
-            <form action="/search" method="post" class="d-flex" novalidate>
+        <div class="navbar-nav ml-2">
+          <div class="mr-1">
+           <form action="/search" method="post" class="d-flex" novalidate>
                 <div class="row justify-content-around">
                     <div class="col-4">
                         <button class="btn btn-md btn-outline-success">Search</button>
                     </div>
                     <div class="col-8">
-                        <input class="form-control" type="text" name="term" id="query" placeholder="Movie-Name" style="width : 100%;">
+                        <input class="form-control" type="text" name="term" id="query" placeholder="Movie-Name" style="width : 100%;background-color: rgba(27, 23, 23, 0.658);">
                         <input type="radio" name="Qtyp" id="nameradio" value="n" checked required style="display: none;">
                     </div> 
                 </div>
-                </form>
+            </form> 
+          </div> 
+        </div>
+        <div class="navbar-nav ml-4">
+          <ul class="navbar-nav mr-1">
             <% if(!currentUser) {%>
-                <a class="nav-link" href="/login">Login</a>
-                <a class="nav-link" href="/register">Register</a>
-                <% } else {%>
-                <div id="uname"><%= currentUser.username %></div>
-                <a class="nav-link" href="/logout"> <span id="logicon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                  </svg>  </span> Logout  </a>
-                <% } %>
+            <li class="nav-item">
+              <a class="nav-link active" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/register">Register</a>
+            </li>
+            <% } else {%>
+              <div id="uname"><%= currentUser.username %></div>
+              <li class="nav-item">
+                <a class="nav-link active" href="/logout"> <span id="logicon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                </svg>  </span>Logout</a>
+              </li>
+              <% } %> 
+          </ul>
         </div>
       </div>
       </div>
   </nav>
 
-
-<!-- <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark" id="top">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Mubies🍦</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-target="#navbarColor01"
-            aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="#navbarColor01">
-            <div class="navbar-nav">
-                <a class="nav-link" href="/">Home</a>
-            </div>
-            <div class="navbar-nav ml-auto">
-                <form action="/search" method="post" class="d-flex" novalidate>
-                    <div class="row justify-content-around">
-                        <div class="col-4">
-                            <button class="btn btn-md btn-outline-success">Search</button>
-                        </div>
-                        <div class="col-8">
-                            <input class="form-control" type="text" name="term" id="query" placeholder="Movie-Name" style="width : 100%;">
-                            <input type="radio" name="Qtyp" id="nameradio" value="n" checked required style="display: none;">
-                        </div> 
-                    </div>
-                    </form>
-                    < if(!currentUser) {%>
-                        <a class="nav-link" href="/login">Login</a>
-                        <a class="nav-link" href="/register">Register</a>
-                        < } else {%>
-                        <div id="uname"><= currentUser.username %></div>
-                        <a class="nav-link" href="/logout"> <span id="logicon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                          </svg>  </span> Logout  </a>
-                        < } %>
-            </div>
-        </div>
-    </div>
-</nav> -->
 
