--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %> 
 <%- include('./partials/Hnavbar') %> 
-<div class="container">
+<div class="container mt-5">
     <div class="row">
         <div class="col-4 offset-3">
             <form action="/register" method="post" novalidate class="validateForm">
@@ -9,7 +9,7 @@
                 <label for="mail" class="form-label">Em@il</label>
                 <input type="email" id="mail" class="form-control" name="email" required> 
                 <label for="pass" class="form-label">Password</label>
-                <input type="password" id="pass" class="form-control" name="password" required>
+                <input type="password" id="pass" class="form-control" name="password" required><br>
                 <button class="btn btn-lg btn-success">Register</button>
             </form>
         </div>
