--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,11 +3,10 @@
 <%- include('./partials/navbar')  %> 
 <%- include('./partials/flash')  %> 
 
-<div class="row">
+<div class="row mt-5">
     <div class="col-6 offset-3">
         <div class="alert alert-danger" role="alert">
             <h4 class="alert-heading"><%=err.message%></h4>
-            <p><%= err.stack %></p>
         </div>
     </div>
 </div>
