--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -18,7 +18,7 @@
                           <p class="card-text"><b>Released :</b> <%= obj.release_date %></p>
                           <p class="card-text"><b>Popularity :</b> <%= obj.popularity %></p>
                           <p class="card-text"><b>Avg Vote :</b> <%= obj.vote_average %> <span class="text-muted"><b>~</b><%= obj.vote_count %> voters</span></p>
-                          <a href="/search/<%= obj.title %>/<%= obj.id %>" class="btn btn-primary">Details</a>
+                          <a href="/search/<%= obj.title %>/<%= obj.id %>" class="btn btn-success">Details</a>
                         </div>
                       </div>
                 </div>
