--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,8 +2,8 @@
 <%- include('./partials/Hnavbar') %> 
 
 <div class="container mt-5">
-    <div class="row">
-        <div class="col-4 offset-3">
+    <div class="row justify-content-center">
+        <div class="col-5">
             <form action="/login" method="post" novalidate class="validateForm">
                 <label for="uname" class="form-label">User-Name</label>
                 <input type="text" id="uname" class="form-control" name="username" active required>
@@ -12,6 +12,8 @@
                 <br>
                 <button class="btn btn-lg btn-primary">Log in</button>
             </form>
+            <br>
+            <p>Not yet Registered? <a href="/register">Register</a></p>
         </div>
     </div>
 </div>
