--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary"  id="top" style="background-image: linear-gradient(to bottom right, rgb(105, 91, 231), rgb(171, 92, 207));opacity:0.8;">
+<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-primary"  id="top" style="background-image: linear-gradient(to bottom right, rgb(105, 91, 231), rgb(171, 92, 207));opacity:0.8;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Mubies🍦</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
