--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,8 +1,8 @@
 <% layout('layouts/boilerplate') %> 
 <%- include('./partials/Hnavbar') %> 
 <div class="container mt-5">
-    <div class="row">
-        <div class="col-4 offset-3">
+    <div class="row justify-content-center">
+        <div class="col-5">
             <form action="/register" method="post" novalidate class="validateForm">
                 <label for="uname" class="form-label">User-Name</label>
                 <input type="text" id="uname" class="form-control" name="username" required>
@@ -12,6 +12,8 @@
                 <input type="password" id="pass" class="form-control" name="password" required><br>
                 <button class="btn btn-lg btn-success">Register</button>
             </form>
+            <br>
+            <p>Already Registered? <a href="/login">Login</a></p>
         </div>
     </div>
 </div>
