reg,login cntnrfluid blw sm+ gototop in matchs

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-5">
+        <div class="col-sm-7 col-md-6 col-lg-5 p-2">
             <form action="/login" method="post" novalidate class="validateForm">
                 <label for="uname" class="form-label">User-Name</label>
                 <input type="text" id="uname" class="form-control" name="username" active required>
