--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -3,7 +3,7 @@
 <%- include('./partials/flash')  %> 
 
 <% if(Qtyp=='n'){ %>
-  <h3>Results for "<%= term %>"</h3> 
+  <h3 id="Mtop">Results for "<%= term %>"</h3> 
   <% } %> 
 
     <div class="container mt-5 mb-3">
@@ -26,4 +26,9 @@
         </div>
     </div>
 
-   
+    <center>
+      <button class="btn btn-info"><a href="#Mtop"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-up-square" viewBox="0 0 16 16">
+        <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+        <path d="M3.544 10.705A.5.5 0 0 0 4 11h8a.5.5 0 0 0 .374-.832l-4-4.5a.5.5 0 0 0-.748 0l-4 4.5a.5.5 0 0 0-.082.537z"/>
+      </svg> Go to Top</a></button>
+    </center>
