--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,7 +2,7 @@
 <%- include('./partials/Hnavbar') %> 
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-5">
+        <div class="col-sm-7 col-md-6 col-lg-5 p-2">
             <form action="/register" method="post" novalidate class="validateForm">
                 <label for="uname" class="form-label">User-Name</label>
                 <input type="text" id="uname" class="form-control" name="username" required>
