--- a/views/home.ejs
+++ b/views/home.ejs
@@ -92,7 +92,7 @@
         for (var i=0, n=checkboxes.length;i<n;i++) 
           {
             if (checkboxes[i].checked){
-            val += checkboxes[i].value +",,,";
+            val += checkboxes[i].value +",";
               }
         }
         list.append(val)
