--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,9 +9,9 @@
     <div class="container mb-3" id="container">
         <div class="row justify-content-center">
             <div class="col-8" id="cntntcol">
-              <form action="/search" method="post" class="validateForm" novalidate id="hform">
+              <form action="/search" method="post" class="validateForm" novalidate id="hform" autocomplete="off">
                 <div class="form-group">
-                <input class="form-control" type="text" name="term" id="query" placeholder="Search Movies...">
+                <input class="form-control" type="text" name="term" id="query" placeholder="Search Movies..." autocomplete="false">
                 </div>
                 <div class="container mt-4">
                   <div class="row" id="element2">
