--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -25,13 +25,13 @@
         </ul>
         <div class="navbar-nav ml-2">
           <div class="mr-1">
-           <form action="/search" method="post" class="d-flex" novalidate>
+           <form action="/search" method="post" class="d-flex" autocomplete="off" novalidate>
                 <div class="row justify-content-around">
                     <div class="col-4">
                         <button class="btn btn-md btn-outline-success">Search</button>
                     </div>
                     <div class="col-8">
-                        <input class="form-control" type="text" name="term" id="query" placeholder="Movie-Name" style="width : 100%;background-color: rgba(27, 23, 23, 0.658);">
+                        <input class="form-control" type="text" name="term" id="query" placeholder="Movie-Name" autocomplete="false" style="width : 100%;background-color: rgba(27, 23, 23, 0.658);">
                         <input type="radio" name="Qtyp" id="nameradio" value="n" checked required style="display: none;">
                     </div> 
                 </div>
