na image on matches proper

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -31,7 +31,7 @@
                         <button class="btn btn-md btn-outline-success">Search</button>
                     </div>
                     <div class="col-8">
-                        <input class="form-control" type="text" name="term" id="query" placeholder="Movie-Name" autocomplete="false" style="width : 100%;background-color: rgba(27, 23, 23, 0.658);">
+                        <input class="form-control" type="text" name="term" id="query" placeholder="Movie-Name" autocomplete="off" style="width : 100%;background-color: rgba(27, 23, 23, 0.658);">
                         <input type="radio" name="Qtyp" id="nameradio" value="n" checked required style="display: none;">
                     </div> 
                 </div>
