--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
             <div class="col-8" id="cntntcol">
               <form action="/search" method="post" class="validateForm" novalidate id="hform" autocomplete="off">
                 <div class="form-group">
-                <input class="form-control" type="text" name="term" id="query" placeholder="Search Movies..." autocomplete="false">
+                <input class="form-control" type="text" name="term" id="query" placeholder="Search Movies..." autocomplete="off">
                 </div>
                 <div class="container mt-4">
                   <div class="row" id="element2">
