--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -6,12 +6,12 @@
   <h3 id="Mtop">Results for "<%= term %>"</h3> 
   <% } %> 
 
-    <div class="container mt-5 mb-3">
+    <div class="container mt-5 mb-3" >
         <div class="row justify-content-center">
             <% for(let obj of resultsARRAY){ %>
                 <div class="col-sm-8 col-md-6 col-lg-4 col-xxl-3">
                     <div class="card border-secondary mb-3">
-                        <a href="/search/<%= obj.title %>/<%= obj.id %>"><img src="<%= obj.poster_path %>" class="card-img-top" alt="N/A"></a>
+                        <a href="/search/<%= obj.title %>/<%= obj.id %>"><img src="<% if(obj.poster_path){ %><%= obj.poster_path %><% }else{ %><%= /public/resources/noi.jpg  %><% } %>" class="card-img-top" alt="N/A"></a>
                         <div class="card-body">
                           <h5 class="card-header mb-2" style="width: 95%;"><%= obj.title %></h5>
                           <p class="card-text"><b>Language :</b> "<%= obj.original_language %>"</p>
