--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -12,7 +12,7 @@
                 <div class="col-sm-8 col-md-6 col-lg-4 col-xxl-3">
                     <div class="card border-secondary mb-3">
                         <a href="/search/<%= obj.title %>/<%= obj.id %>">
-                          <% if(obj.poster_path){ %>
+                          <% if(obj.poster_path !== "https://image.tmdb.org/t/p/originalnull"){ %>
                             <img src="<%= obj.poster_path %>" class="card-img-top" alt="N/A">
                           <% }else{ %>
                             <img src="/resources/noi.jpg" class="card-img-top" alt="N/A">
