go to top fix for genre query

--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -4,7 +4,9 @@
 
 <% if(Qtyp=='n'){ %>
   <h3 id="Mtop">Results for "<%= term %>"</h3> 
-  <% } %> 
+  <% }else{ %> 
+    <h3 id="Mtop"></h3> 
+    <% } %>
 
     <div class="container mt-5 mb-3" >
         <div class="row justify-content-center">
