--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -10,7 +10,7 @@
 
     <div class="container mt-5 mb-3" >
         <div class="row justify-content-center">
-            <% for(let obj of resultsARRAY){ %>
+            <% for(let obj of resultsARRAY){ if(obj.adult === "true") continue; %>
                 <div class="col-sm-8 col-md-6 col-lg-4 col-xxl-3">
                     <div class="card border-secondary mb-3">
                         <a href="/search/<%= obj.title %>/<%= obj.id %>">
