--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -49,6 +49,9 @@
             </li>
             <% } else {%>
               <div id="uname"><%= currentUser.username %></div>
+              <!-- <form action="/logout" method="post">
+                <button type="button" class="btn btn-lg btn-warning">LOGOUT</button>
+              </form> -->
               <li class="nav-item">
                 <a class="nav-link active" href="/logout"> <span id="logicon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                   <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
